@@ -2,6 +2,7 @@
  - (djm) Avoid bug in Solaris PAM libs
  - (djm) Disconnect if no tty and PAM reports password expired
  - (djm) Fix for PAM password changes being echoed (from stevesk)
+ - (stevesk) Fix compile problem with PAM password change fix
 
 20011027
  - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
@@ -6779,4 +6780,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1624 2001/10/28 11:36:55 djm Exp $
+$Id: ChangeLog,v 1.1625 2001/10/28 17:32:38 stevesk Exp $
